package com.maxqiu.demo.P13_Command;

/**
 * 灯光接收者
 * 
 * @author Max_Qiu
 */
public class LightReceiver {

    public void on() {
        System.out.println(" 电灯打开了.. ");
    }

    public void off() {
        System.out.println(" 电灯关闭了.. ");
    }
}
