package com.maxqiu.demo.P13_Command;

/**
 * 电视接收者
 * 
 * @author Max_Qiu
 */
public class TvReceiver {

    public void on() {
        System.out.println(" 电视机打开了.. ");
    }

    public void off() {
        System.out.println(" 电视机关闭了.. ");
    }

}
